// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttona with some emoji 1`] = `
<button
  className="button button-extra"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Buttona with text 1`] = `
<button
  className="button button-extra"
  onClick={[Function]}
>
  Hello Button!
</button>
`;
